@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-beta-2 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- Fixed improper log message reference in lexicon's reloadFromBase processor
 - Additional access control defects and warning messages resolved for anonymous users.
 - Fixed access control defect which prevented multiple policies from being respected per principal.
 - Fixed issue with Policy Attributes not adding b/c id was not passed in
